Include vars and mixins
https://www.origamid.com/curso/css-com-sass/4-7-variaveis-e-mixins

--- a/css/style.css
+++ b/css/style.css
@@ -218,3 +218,9 @@ table {
   display: table;
   clear: both;
 }
+
+body {
+  background: #edece4;
+  border: 10px solid #cbc6b9;
+  color: #2a2426;
+}
