--- a/scss/_vars-and-mixins.scss
+++ b/scss/_vars-and-mixins.scss
@@ -3,7 +3,7 @@ $beige-light: #edece4;
 $beige-medium: #cbc6b9;
 $beige-dark: #988c77;
 $gray: #2a2426;
-$green: #988c77;
+$green: #1ab912;
 
 // Typography
 $type-1: 'PT Mono', monospace;
