--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -18,7 +18,7 @@ $s-device: 480px;
     }
   }
   @else if $size == m {
-    @media screen and (min-width: #{$m-device}) and (max-width: #{$l-device  - 1}) {
+    @media screen and (min-width: #{$s-device}) and (max-width: #{$l-device  - 1}) {
       @content;
     }
   }
