--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -9,6 +9,7 @@
 
 .menu-item {
   margin-bottom: 60px;
+  position: relative;
 
   h2 {
     @include type-2(24);
@@ -18,6 +19,12 @@
   li {
     @include type-1(18);
     line-height: em(38, 18);
+
+    @include d(m) {
+      &:nth-child(1), &:nth-child(2) {
+        max-width: 50%;
+      }
+    }
 
     span {
       font-family: $type-2;
@@ -39,13 +46,20 @@
     border: 10px solid $beige-medium;
     position: absolute;
     right: 0px;
-    margin-top: 60px;;
+    top: 10px;
+    margin-top: 60px;
+    @include d(m) {
+      max-width: 30%;
+    }
     @include d(l) {
       right: 120px;
     }
     @include d(s) {
-      width: 120px;
-      margin-top: 0;
+      display: block;
+      position: relative;
+      width: 200px;
+      margin: 0 auto;
+      margin-top: 20px;
     }
   }
 }
