--- a/src/scss/_intro.scss
+++ b/src/scss/_intro.scss
@@ -1,75 +1,76 @@
 .intro {
-  margin-top: 60px;
-  @include d(s) {
+  margin-top: 20px;
+}
+
+  .intro__info {
+    border-right: 2px solid $gray;
     margin-top: 20px;
-  }
-}
 
-.logo {
-  margin-bottom: 60px;
-}
+    @include break('small') {
+      font-size: em(14);
+    }
 
-.intro-info {
-  border-right: 2px solid $gray;
-  max-width: 320px;
-
-  p {
-    padding-top: 10px;
+    @include break('medium') {
+      font-size: em(18);
+    }
   }
 
-  p:first-child {
+  .intro__schedule, .intro__address, .intro__phone {
+    margin-top: 10px;
+  }
+
+  .intro__schedule {
     border-bottom: 2px solid $gray;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
   }
 
-  @include d(m) {
-    font-size: em(14);
-  }
-}
+  .intro__phone {
+    color: $beige-dark;
 
-.intro-phone {
-  color: $beige-dark;
-  @include d(m) {
-    font-size: em(16);
-  }
-  @include d(s) {
-    margin-bottom: 40px;
-  }
+    @include break('medium') {
+      &::after {
+        content: "/ / / /";
+        display: block;
+        margin-top: 80px;
+        margin-bottom: 100px;
+        font-size: 150px;
+        letter-spacing: -70px;
+        color: $gray;
 
-  &::after {
-    content: "/ / / /";
-    display: block;
-    margin-top: 200px;
-    font-size: 220px;
-    letter-spacing: -90px;
-    color: $gray;
-
-    @include d(m) {
-      margin-top: 80px;
-      font-size: 150px;
-      letter-spacing: -70px;
-    }
-
-    @include d(s) {
-      display: none;
+        @include break('wide') {
+          margin-top: 200px;
+          font-size: 220px;
+          letter-spacing: -90px;
+        }
+      }
     }
   }
-}
 
-.open {
-  display: inline-block;
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background: $green;
-  margin-left: 30px;
+  .intro__status {
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    margin-left: 30px;
 
-  @include d(m) {
-    margin-left: 1em;
+    @include break('small') {
+      margin-left: 0;
+    }
+
+    @include break('medium') {
+      margin-left: 30px;
+    }
   }
-}
 
-.intro-photo {
-  border: 10px solid $beige-medium;
-  width: 100%;
-}
+    .intro__status--open {
+      background: $green;
+    }
+
+    .intro__status--closed {
+      background: $gray;
+    }
+
+  .intro__photo {
+    margin-top: 20px;
+    border: 10px solid $beige-medium;
+  }
