--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -1,84 +1,32 @@
 .contact {
-  margin-top: 120px;
-  margin-bottom: 120px;
-  @include d(s) {
-    margin-top: 60px;
-    margin-bottom: 60px;
+  margin-top: 60px;
+  margin-bottom: 60px;
+
+  @include break('small') {
+    margin-top: 120px;
+    margin-bottom: 120px;
   }
 }
 
-.contact form {
-  label {
-    @include type-1(18);
+  .contact__info {
     display: block;
-  }
+    color: $beige-dark;
+    margin-bottom: 3em;
+    margin-top: 2em;
 
-  input[type="text"], textarea {
-    @include type-2(18);
-    color: $gray;
-    width: 100%;
-    padding: 0 5px;
-    height: 40px;
-    border: 2px solid $beige-dark;
-    background: transparent;
-    margin-bottom: 1em;
-    &:hover, &:focus {
-      outline: none;
-      border-color: $beige-medium;
+    @include break('wide') {
+      float: right;
+      text-align: right;
+      margin-top: -3em;
+    }
+
+    p::after {
+      content: " ////"
     }
   }
 
-  textarea {
-    height: 120px;
-  }
-}
-
-input.button {
-  @include type-1(18);
-  cursor: pointer;
-  color: $beige-dark;
-  text-transform: uppercase;
-  border: 2px solid $beige-dark;
-  background: transparent;
-  display: block;
-  width: 200px;
-  padding-top: 5px;
-  box-shadow: 5px 5px 0 -2px $beige-medium,
-              5px 5px 0 0 $beige-dark;
-  transition: .3s;
-  &:hover {
-    box-shadow: 3px 3px 0 -2px $beige-medium,
-                3px 3px 0 0 $beige-dark;
-  }
-}
-
-.contact-info {
-  display: block;
-  color: $beige-dark;
-  margin-bottom: 3em;
-  margin-top: 2em;
-  @include d(l) {
-    float: right;
-    text-align: right;
-    margin-top: -3em;
-  }
-
-  p::after {
-    content: " ////"
-  }
-}
-
-.contact-map {
-  display: block;
-  box-shadow: 0 0 0 10px $beige-medium;
-  clear: both;
-
-  img {
+  .contact__map {
+    display: block;
+    clear: both;
     width: 100%;
   }
-
-  transition: .3s;
-  &:hover {
-    box-shadow:0 0 0 6px $beige-medium;
-  }
-}
