Refactor menu component

--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -1,65 +1,59 @@
 .menu {
-  margin-top: 120px;
-  margin-bottom: 120px;
-  @include d(s) {
-    margin-top: 60px;
-    margin-bottom: 60px;
-  }
-}
-
-.menu-item {
+  margin-top: 60px;
   margin-bottom: 60px;
-  position: relative;
 
-  h2 {
-    @include type-2(24);
-    margin-bottom: 1em;
-  }
-
-  li {
-    @include type-1(18);
-    line-height: em(38, 18);
-
-    @include d(m) {
-      &:nth-child(1), &:nth-child(2) {
-        max-width: 50%;
-      }
-    }
-
-    span {
-      font-family: $type-2;
-      color: $beige-dark;
-      display: inline-block;
-      width: 70px;
-      text-align: right;
-      margin-right: 10px;
-      margin-left: -80px;
-      @include d(s) {
-        margin-left: 0;
-        width: auto;
-      }
-    }
-  }
-
-  img {
-    border-radius: 50%;
-    border: 10px solid $beige-medium;
-    position: absolute;
-    right: 0px;
-    top: 10px;
-    margin-top: 60px;
-    @include d(m) {
-      max-width: 30%;
-    }
-    @include d(l) {
-      right: 120px;
-    }
-    @include d(s) {
-      display: block;
-      position: relative;
-      width: 200px;
-      margin: 0 auto;
-      margin-top: 20px;
-    }
+  @include break('medium') {
+    margin-top: 120px;
+    margin-bottom: 120px;
   }
 }
+
+  .menu__title {
+    @include type-2(24);
+    margin: 0 0 0.5em 0;
+  }
+
+  .menu__item {
+    margin-bottom: 20px;
+    position: relative;
+
+    @include break('medium') {
+      margin-bottom: 60px;
+    }
+  }
+
+  .menu__list {
+    @include type-1(18);
+    padding: 0;
+    list-style: none;
+  }
+
+  .menu__price {
+    font-family: $type-2;
+    color: $beige-dark;
+    display: inline-block;
+    text-align: right;
+    margin-right: 10px;
+
+    @include break('small') {
+      width: 70px;
+      margin-left: -80px;
+    }
+  }
+
+  .menu__photo {
+    border-radius: 50%;
+    margin: auto;
+
+    @include break('medium') {
+      position: absolute;
+      right: 0;
+      top: 20px;
+    }
+
+    @include break('wide') {
+      position: absolute;
+      right: 120px;
+      top: 20px;
+    }
+  }
