--- a/src/scss/_objects.scss
+++ b/src/scss/_objects.scss
@@ -1,6 +1,6 @@
 .section-title {
   @include type-1(18);
-  margin: 0;
+  margin: 0 0 1em 0;
 
   font-weight: normal;
   text-transform: uppercase;
