--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -1,32 +1,34 @@
 .contact {
-  margin-top: 60px;
   margin-bottom: 60px;
+  margin-top: 60px;
 
   @include break('small') {
-    margin-top: 120px;
     margin-bottom: 120px;
+    margin-top: 120px;
   }
 }
 
-  .contact__info {
-    display: block;
-    color: $beige-dark;
-    margin-bottom: 3em;
-    margin-top: 2em;
+.contact__info {
+  display: block;
+  margin-bottom: 3em;
+  margin-top: 2em;
+  color: $beige-dark;
 
-    @include break('wide') {
-      float: right;
-      text-align: right;
-      margin-top: -3em;
-    }
-
-    p::after {
-      content: " ////"
-    }
+  @include break('wide') {
+    float: right;
+    text-align: right;
+    margin-top: -3em;
   }
 
-  .contact__map {
-    display: block;
-    clear: both;
-    width: 100%;
+  p {
+    &::after {
+      content: ' ////';
+    }
   }
+}
+
+.contact__map {
+  display: block;
+  clear: both;
+  width: 100%;
+}
