Fix style comment

--- a/src/scss/_variables-and-mixins.scss
+++ b/src/scss/_variables-and-mixins.scss
@@ -8,7 +8,9 @@ $gray: #2a2426;
 $green: #1ab912;
 
 
+//----------------
 //-- Typography --
+//----------------
 $type-1: 'PT Mono', monospace;
 $type-2: 'Aref Ruqaa', serif;
 
@@ -35,9 +37,10 @@ $type-2: 'Aref Ruqaa', serif;
   }
 }
 
-//----------------
-//-- Typography --
-//----------------
+
+//------------
+//-- Layout --
+//------------
 $cols: 12;
 $gutter: 20px;
 
