--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -2,7 +2,7 @@
   margin-bottom: 60px;
   margin-top: 60px;
 
-  @include break('small') {
+  @include break('medium') {
     margin-bottom: 120px;
     margin-top: 120px;
   }
@@ -14,7 +14,7 @@
   margin-top: 2em;
   color: $beige-dark;
 
-  @include break('wide') {
+  @include break('x-large') {
     float: right;
     text-align: right;
     margin-top: -3em;
