Cleanup SCSS code

--- a/src/scss/_variables-and-mixins.scss
+++ b/src/scss/_variables-and-mixins.scss
@@ -98,6 +98,7 @@ $break-x-large: 1200px; // For high resolution screens
   @include break('medium') {
     margin: 0 auto;
     max-width: $break-large;
+    padding: 0;
     position: relative;
   }
 
