--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -1,18 +1,17 @@
 .section-title {
   @include type-1(18);
-  margin: 0 0 1em;
-
   font-weight: normal;
+  margin: 0 0 1em;
   text-transform: uppercase;
 
   &::after {
+    background: $gray;
     content: '';
     display: block;
     float: right;
-    width: 75%;
     height: 2px;
     margin-top: 14px;
-    background: $gray;
+    width: 75%;
 
     @include break('medium') {
       width: 40%;
@@ -30,19 +29,16 @@
 
 .button {
   @include type-1(18);
-  display: block;
-  width: 200px;
-  padding-top: 5px;
   background: transparent;
   border: 2px solid $beige-dark;
-  box-shadow: 5px 5px 0 -2px $beige-medium,
-  5px 5px 0 0 $beige-dark;
-
+  box-shadow: 5px 5px 0 -2px $beige-medium, 5px 5px 0 0 $beige-dark;
   color: $beige-dark;
-  text-transform: uppercase;
-
   cursor: pointer;
+  display: block;
+  padding-top: 5px;
+  text-transform: uppercase;
   transition: .3s;
+  width: 200px;
 
   &:hover {
     box-shadow: 3px 3px 0 -2px $beige-medium, 3px 3px 0 0 $beige-dark;
@@ -56,8 +52,8 @@
 .framed--hoverable {
   border-width: 0;
   box-shadow: 0 0 0 10px $beige-medium;
-  transition: .3s;
   margin: 10px;
+  transition: .3s;
   width: calc(100% - 20px);
 
   &:hover {
