--- a/src/scss/_intro.scss
+++ b/src/scss/_intro.scss
@@ -31,29 +31,29 @@
 
   @include break('large') {
     &::after {
+      color: $gray;
       content: '/ / / /';
       display: block;
-      margin-top: 80px;
-      margin-bottom: 100px;
       font-size: 150px;
       letter-spacing: -70px;
-      color: $gray;
+      margin-bottom: 100px;
+      margin-top: 80px;
 
       @include break('x-large') {
-        margin-top: 200px;
         font-size: 220px;
         letter-spacing: -90px;
+        margin-top: 200px;
       }
     }
   }
 }
 
 .intro__status {
-  display: inline-block;
-  width: 12px;
-  height: 12px;
   border-radius: 50%;
+  display: inline-block;
+  height: 12px;
   margin-left: 30px;
+  width: 12px;
 
   @include break('medium') {
     margin-left: 0;
@@ -74,4 +74,8 @@
 
 .intro__photo {
   margin-top: 20px;
+
+  @include break('medium') {
+    margin-top: 0;
+  }
 }
